# eclipsa-audio-plugin

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md  vcpkg.json
.github/workflows/: cmake-macos.yml  cmake-multi-platform.yml
audioelementplugin/: CMakeLists.txt
audioelementplugin/src/: AudioElementPluginEditor.cpp  AudioElementPluginEditor.h  AudioElementPluginProcessor.cpp  AudioElementPluginProcessor.h
cmake/: boost.cmake  copy_resources.cmake  eclipsa_build_tests.cmake  eclipsa_test.cmake  find_ffmpeg.cmake  libspatialaudio.cmake  pffft.cmake  zeromq.cmake
cmake/protobuf/: protobuf-config-version.cmake
common/: CMakeLists.txt
common/components/: components.cpp  components.h
common/components/icons/: CMakeLists.txt
common/components/icons/svg/: SvgIconComponent.h  SvgIconLookup.h
common/components/src/: AudioFilePlayer.cpp  AudioFilePlayer.h  ColouredLight.h  ColouredSlider.h  ControlKnob.cpp  ControlKnob.h  ControlKnobSkewed.cpp  ControlKnobSkewed.h  DAWCompatibilityChecker.h  DAWWarningBanner.h  EclipsaColours.h  ExportValidation.h  FilePickerTextBox.h  GainControlTextEditor.h  HeaderBar.h  Icons.h  RoundImageButton.h  SegmentedToggleButton.cpp  SegmentedToggleButton.h  SelectionBox.h  SelectionButton.h  SliderButton.h  TimeFormatSegmentSelector.h  TitledLabel.h  TitledTextBox.h  Viewports.h
common/components/src/ambisonics_visualizers/: AmbisonicsVisualizer.cpp  AmbisonicsVisualizer.h
common/components/src/loudness_meter/: LoudnessLevelBar.h  LoudnessStats.cpp  LoudnessStats.h
common/components/src/room_views/: Coordinates.cpp  Coordinates.h
common/data_repository/: data_repository.h
common/data_repository/implementation/: FilePlaybackRepository.h
common/data_repository/tests/: FileExportRepository_test.cpp
common/data_structures/: data_structures.cpp  data_structures.h
common/data_structures/src/: AudioElement.cpp  AudioElement.h  AudioElementCommunication.h  AudioElementPluginSyncClient.h  FileExport.cpp  FileExport.h  FilePlayback.cpp  FilePlayback.h  MixPresentation.cpp  MixPresentation.h  MixPresentationSoloMute.h  PlaybackMS.h  RepositoryCollection.h  TimeFormatConverter.cpp  TimeFormatConverter.h
common/data_structures/tests/: AudioElement_test.cpp  MixPresentation_test.cpp
common/player/: player.cpp  player.h
common/player/src/transport/: BackgroundBuffer.cpp  BackgroundBuffer.h  IAMFDecoderSource.cpp  IAMFDecoderSource.h  IAMFPlaybackDevice.cpp  IAMFPlaybackDevice.h  PbRingBuffer.h
common/player/test/: BackgroundBuffer_test.cpp  CMakeLists.txt  IAMFDecoderSource_test.cpp  PbRingBuffer_test.cpp
common/player/test/test_resources/: test.iamf
common/processors/: processors.cpp  processors.h
common/processors/audioelementplugin_publisher/: AudioElementPluginDataPublisher.cpp  AudioElementPluginDataPublisher.h  MessagingThread.cpp  MessagingThread.h
common/processors/channel_monitor/: ChannelMonitorProcessor.cpp
common/processors/file_output/: FileOutputProcessor.cpp  FileOutputProcessor.h  FileOutputProcessor_PremierePro.cpp  WavFileOutputProcessor.cpp  WavFileOutputProcessor.h
common/processors/file_output/iamf_export_utils/: IAMFExportUtil.cpp  IAMFExportUtil.h  IAMFFileReader.cpp  IAMFFileReader.h  IAMFFileWriter.cpp  IAMFFileWriter.h
common/processors/gain/: GainProcessor.cpp
common/processors/loudness_export/: LoudnessExportProcessor.cpp
common/processors/mix_monitoring/: MixMonitorProcessor.h
common/processors/mix_monitoring/loudness_standards/: MeasureEBU128.cpp  MeasureEBU128.h
common/processors/panner/: Panner3DProcessor.cpp  Panner3DProcessor.h
common/processors/processor_base/: ProcessorBase.h
common/processors/render/: RenderProcessor.cpp
common/processors/routing/: RoutingProcessor.cpp
common/processors/tests/: CMakeLists.txt  FileOutputFixture.h  FileOutputProcessor_PremierePro_test.cpp  FileOutputProcessor_test.cpp  FileOutputTestFixture.h  FileOutputTestUtils.h  GainProcessor_test.cpp  IAMFFileReader_test.cpp  IAMFFileWriter_test.cpp  LoudnessExportProcessor_test.cpp  MP4IAMFDemuxer_test.cpp  MeasureEBU128_test.cpp  ProcessorBase_test.cpp  RemappingProcessor_test.cpp  Render_test.cpp
common/processors/tests/test_resources/: HashSourceFileRelease.iamf  SilentSampleVideo_h264.mov  SilentSampleVideo_h265.mov
common/substream_rdr/bin_rdr/: BinauralRdr.cpp  BinauralRdr.h
common/substream_rdr/substream_rdr_utils/: Speakers.cpp  Speakers.h
common/substream_rdr/surround_panner/: AmbisonicPanner.cpp  AudioPanner.h
common/substream_rdr/tests/: AudioPanner_test.cpp  BinauralRdr_test.cpp  HOAToBedRdr_test.cpp
rendererplugin/: CMakeLists.txt
rendererplugin/src/: RendererProcessor.cpp  RendererProcessor.h
rendererplugin/src/screens/: EditPresentationScreen.cpp  EditPresentationScreen.h  ElementRoutingScreen.cpp  FileExportScreen.cpp  FileExportScreen.h  RoomMonitoringScreen.cpp  RoomMonitoringScreen.h
rendererplugin/test/: RendererProcessor_test.cpp
rendererplugin/test/testresources/: HashSourceFile.release.iamf.checksum  HashSourceFileDebug.iamf  HashSourceFileRelease.iamf
scripts/: package.sh
